Koala :: fix bullet points on mobile

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -202,6 +202,10 @@ section {
 				float: left;
 				height: 60px;
 				width: 60px;
+				@include breakpoint(l-one) {
+					height: 24px;
+					width: 24px;
+				}
 			}
 			.fl-info {
 				float: left;
@@ -209,6 +213,7 @@ section {
 				padding: 0 0 0 32px;
 				width: calc(100% - 64px);
 				@include box-sizing(border-box);
+				@include breakpoint(l-one) { padding: 0 0 0 20px; }
 				strong { text-transform: uppercase; }
 			}
 		}
